--- a/api-reference/apis/interior-api/fetch.mdx
+++ b/api-reference/apis/interior-api/fetch.mdx
@@ -1,82 +1,22 @@
 ---
 title: "Fetch Queued Request Endpoint"
 openapi: 'POST /interior/fetch/{id}'
+description: 'Fetch Queued Request API fetches queued request.'
 ---
+<Note>
+**Note:** This endpoint does not generate new images; it only returns already generated or queued images.
+</Note>
 
-## Overview[​](#overview "Direct link to Overview")
-
-Fetch Queued Request API fetches queued request.
-
-Usually more complex image generation requests take more time for processing. Such requests are being queued for processing and the output Images are retrievable after some time.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint to return the corresponding queued Images.
+Where `{id}` is the ID returned together with the URL in the response upon its generation. This endpoint does not generate new image, it returns already generated/queued image.
+```curl curl
 --request POST 'https://modelslab.com/api/v6/interior/fetch/{id}' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v6/interior/fetch/\{id}](https://modelslab.com/api/v6/interior/fetch/%7Bid%7D) endpoint to return the corresponding queued Images. Where `{id}` is the ID returned together with the URL in the response upon its generation. This endpoint does not generate new image, it returns already generated/queued image.
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter | Description                                  |
-| :-------- | :------------------------------------------- |
-| **key**   | Your API Key used for request authorization. |
-
-**Note:** This endpoint does not generate new images; it only returns already generated or queued images.
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{ "key": ""}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({ "key": ""});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch(https://modelslab.com/api/v6/interior/fetch/{id}", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => ""];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v6/fashion/fetch/{id}',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v6/fashion/fetch/{id}',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": ""  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = https://modelslab.com/api/v6/interior/fetch/{id}"payload = json.dumps({ "key": ""})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\"\n}");Request request = new Request.Builder()  .url(https://modelslab.com/api/v6/interior/fetch/{id}")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-* Success
-* Processing
-* Error
-
-```
-{    "status": "success",    "id": 454,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/271cedbb-c6ae-4042-8c81-4e59b7af37c8.png"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/271cedbb-c6ae-4042-8c81-4e59b7af37c8.png"    ]}
-```
-
-```
-{    "status": "processing",    "message": "try again later.",    "output": "",    "tip": "Get 20x faster image generation using enterprise plan. Click here : https://modelslab.com/enterprise"}
-```
-
-```
-{    "status": "error",    "message": "Error message"}
+## Body
+```json json
+{ 
+    "key": ""
+}
 ```
