--- a/index.mdx
+++ b/index.mdx
@@ -43,42 +43,42 @@ Explore our comprehensive suite of AI APIs designed for next-generation applicat
   <Card
     title="Image Generation"
     icon="image"
-    href="/api-guide/apis/image-generation/image-generation"
+    href="/image-generation/overview"
   >
     Create stunning visuals with 10,000+ Stable Diffusion models
   </Card>
   <Card
     title="Video Creation"
     icon="video"
-    href="/api-guide/apis/video-api/overview"
+    href="/video-api/overview"
   >
     Generate and edit videos from text prompts and existing footage
   </Card>
   <Card
     title="Voice & Audio"
     icon="microphone"
-    href="/api-guide/apis/voice-cloning/overview"
+    href="/voice-cloning/overview"
   >
     Text-to-speech, voice cloning, speech-to-text.
   </Card>
   <Card
     title="3D Generation"
     icon="cube"
-    href="http://localhost:3000/api-guide/apis/3d-api/overview"
+    href="/3d-api/overview"
   >
     Transform text and images into 3D models and objects
   </Card>
     <Card
     title="Uncensored Chat"
     icon="comment"
-    href="/api-guide/apis/uncensored-chat-api/overview"
+    href="/uncensored-chat-api/overview"
   >
     Enagage into conversation without censorship.
   </Card>
   <Card
     title="Deepfake"
     icon="mask"
-    href="/api-guide/apis/uncensored-chat-api/overview"
+    href="/apis/deepfake-api/overview"
   >
     Generate Deepfake Videos
   </Card>
